--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-<br/>hello<br/> world
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tienda de Tintas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+        .header h1 {
+            margin: 0;
+        }
+        .nav {
+            display: flex;
+            justify-content: center;
+            background-color: #444;
+            padding: 0.5rem;
+        }
+        .nav a {
+            color: #fff;
+            margin: 0 1rem;
+            text-decoration: none;
+        }
+        .banner {
+            background-image: url('tu-imagen-banner.jpg');
+            background-size: cover;
+            color: #fff;
+            padding: 2rem;
+            text-align: center;
+        }
+        .banner h2 {
+            margin: 0;
+        }
+        .content {
+            display: flex;
+            justify-content: space-around;
+            margin: 2rem;
+        }
+        .filters, .products {
+            background-color: #fff;
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .filters h3, .products h3 {
+            margin-top: 0;
+        }
+        .colors {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .color {
+            width: 30px;
+            height: 30px;
+            margin: 5px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+        .color.red { background-color: #D32F2F; }
+        .color.blue { background-color: #1976D2; }
+        .color.green { background-color: #388E3C; }
+        .color.yellow { background-color: #FBC02D; }
+        .product {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 1rem;
+        }
+        .product img {
+            width: 100px;
+            height: 100px;
+        }
+        .product button {
+            background-color: #1976D2;
+            color: #fff;
+            border: none;
+            padding: 0.5rem;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Tienda de Tintas</h1>
+    </div>
+    <div class="nav">
+        <a href="#">Inicio</a>
+        <a href="#">Tintas para Sellos</a>
+        <a href="#">Tintas para Serigrafía</a>
+        <a href="#">Proyectos Artísticos</a>
+        <a href="#">Contacto</a>
+    </div>
+    <div class="banner">
+        <h2>Descubre Nuestras Tintas para Tus Proyectos Creativos</h2>
+    </div>
+    <div class="content">
+        <div class="filters">
+            <h3>Filtrar por Color</h3>
+            <div class="colors">
+                <div class="color red" title="Rojo Carmín"></div>
+                <div class="color blue" title="Azul Rey"></div>
+                <div class="color green" title="Verde Esmeralda"></div>
+                <div class="color yellow" title="Amarillo Limón"></div>
+            </div>
+        </div>
+        <div class="products">
+            <h3>Productos Destacados</h3>
+            <div class="product">
+                <img src="tinta-roja.jpg" alt="Tinta Roja">
+                <p>Tinta Roja</p>
+                <button>Comprar Ahora</button>
+            </div>
+            <div class="product">
+                <img src="tinta-azul.jpg" alt="Tinta Azul">
+                <p>Tinta Azul</p>
+                <button>Comprar Ahora</button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
