--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
                 <div class="color green" title="Verde Esmeralda"></div>
                 <div class="color yellow" title="Amarillo Limón"></div>
             </div>
+
+            <div class="new">
+        <div class="filters">
+            <h3>Filtrar por Color</h3>
+            <div class="colors">
+                <div class="color red" title="Rojo Carmín"></div>
+                <div class="color blue" title="Azul Rey"></div>
+                <div class="color green" title="Verde Esmeralda"></div>
+                <div class="color yellow" title="Amarillo Limón"></div>
+            </div>
+
+            
         </div>
         <div class="products">
             <h3>Productos Destacados</h3>
