--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ La tinta permanece siempre fresca en el cojín y seca al sellar en 123¡
                 </form>
                 <article>
  <img src="https://tse3.mm.bing.net/th?id=OIG2.uO90pn3QIrEpaQBfeKND&pid=ImgGn" alt="imagen">
-                    <h3>Título de la Noticia 1</h3>
+                    <h3>*Sellos Automáticos*</h3>
 
                     <p>Resumen de la noticia. <a href="#">Leer más</a></p>
                 </article>
@@ -383,15 +383,15 @@ La tinta permanece siempre fresca en el cojín y seca al sellar en 123¡
             <section class="column latest-news">
               
                 <article>
-                    <img src="https://tse4.mm.bing.net/th?id=OIG2.wBAjnquB2p70o6U1fjl0&pid=ImgGn" alt="imagen">
-                    <h3>Título de la Última Noticia 1</h3>
+                    <img src="https://http2.mlstatic.com/D_NQ_NP_2X_836361-MLM81484878002_012025-F.webp">
+                    <h3>&quot;Sellos Tradicionales&quot;</h3>
                     <p>Resumen de la noticia. <a href="#">Leer más</a></p>
               </section>
 <section class="column ads">
-    <h3>Publicidad</h3>
+    <h3></h3>
     <article>
-<img src="https://tse2.mm.bing.net/th?id=OIG4.F4CEYaqpdzz.MLv88LPr&pid=ImgGn" alt="imagen">
-        <h3>Producto o Servicio 1</h3>
+<img src="https://http2.mlstatic.com/D_NQ_NP_2X_943597-MLM71968273564_092023-F.webp">
+        <h3>¡Sellos Gigantes!</h3>
         <p>Descripción del producto o servicio. <a href="#">Más info</a></p>
     </article>
    </section>
