--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compra tintas para sellos de goma, cojines y sellos personalizados en QuetzalArte.com Calidad y variedad para tus proyectos creativos. ¡Envíos gratis!">
+    <meta name="keywords" content="tintas para sellos de goma, cojines para sellos, sellos personalizados, arte y decoración, QuetzalArte, envíos gratis">
+    <meta name="author" content="QuetzalArte.com">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="QuetzalArte.com - Tienda de Tintas y Sellos Personalizados">
+    <meta property="og:description" content="Compra tintas para sellos de goma, cojines y sellos personalizados en QuetzalArte. Calidad y variedad para tus proyectos creativos. ¡Envíos gratis!">
+    <meta property="og:image" content="https://http2.mlstatic.com/D_NQ_NP_2X_941537-MLM45701924425_042021-F.webp">
+    <meta property="og:url" content="https://www.quetzalarte.com">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="QuetzalArte.com - Tienda de Tintas y Sellos Personalizados">
+    <meta name="twitter:description" content="Compra tintas para sellos de goma, cojines y sellos personalizados en QuetzalArte. Calidad y variedad para tus proyectos creativos. ¡Envíos gratis!">
+    <meta name="twitter:image" content="https://http2.mlstatic.com/D_NQ_NP_2X_941537-MLM45701924425_042021-F.webp">
     <title>QuetzalArte.com</title>
     <style>
         body {
