--- a/index.html
+++ b/index.html
@@ -292,10 +292,10 @@
 
         <div class="content">
             <section class="column news">
-                <form action="#" method="get" class="search-form">
+                <!--<form action="#" method="get" class="search-form">
                     <input type="text" name="search" id="search" placeholder="Buscar productos...">
                     <button type="submit"><i class="fas fa-search"></i></button>
-                </form>
+                </form>-->
                 
                 <h2>SELECCIONA el COLOR de TINTA 
                 <BR/>- Linea EcoArt</h2>
