--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:title" content="QuetzalArte.com - Tienda de Tintas y Sellos Personalizados">
     <meta name="twitter:description" content="Compra tintas para sellos de goma, cojines y sellos personalizados en QuetzalArte. Calidad y variedad para tus proyectos creativos. ¡Envíos gratis!">
     <meta name="twitter:image" content="https://http2.mlstatic.com/D_NQ_NP_2X_941537-MLM45701924425_042021-F.webp">
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.BGUDSh3dr-Npz6ZBKCW_8wHaHa?pid=ImgDet&w=474&h=474&rs=1" type="image/x-icon">
     <title>QuetzalArte.com</title>
     <style>
         body {
