--- a/mpagos.html
+++ b/mpagos.html
@@ -38,7 +38,7 @@
     </form>
 
     <script>
-        const mp = new MercadoPago('TU_PUBLIC_KEY', {
+        const mp = new MercadoPago('APP_USR-5caafcd5-a407-4cfb-9626-fb7825d863f9', {
             locale: 'es-AR'
         });
 
