--- a/mpagos.html
+++ b/mpagos.html
@@ -39,7 +39,7 @@
 
     <script>
         const mp = new MercadoPago('APP_USR-5caafcd5-a407-4cfb-9626-fb7825d863f9', {
-            locale: 'es-AR'
+            locale: 'es-MX'
         });
 
         const cardForm = mp.cardForm({
