--- a/mpagos.html
+++ b/mpagos.html
@@ -3,131 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Pago con Mercado Pago</title>
+    <title>Checkout con Mercado Pago</title>
     <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body>
-    <h1>Realizar Pago</h1>
-    <form id="paymentForm">
-        <label for="cardNumber">Número de Tarjeta:</label>
-        <input type="text" id="cardNumber" name="cardNumber" required value="5579 0534 6148 2647">
-
-        <label for="cardExpirationMonth">Mes de Expiración:</label>
-        <input type="text" id="cardExpirationMonth" name="cardExpirationMonth" required value="11">
-
-        <label for="cardExpirationYear">Año de Expiración:</label>
-        <input type="text" id="cardExpirationYear" name="cardExpirationYear" required value="30">
-
-        <label for="cardholderName">Nombre del Titular:</label>
-        <input type="text" id="cardholderName" name="cardholderName" required value="jccc123">
-
-        <label for="securityCode">Código de Seguridad:</label>
-        <input type="text" id="securityCode" name="securityCode" required value="123">
-
-        <label for="installments">Cuotas:</label>
-        <input type="number" id="installments" name="installments" value="1" required>
-
-        <label for="transactionAmount">Monto de la Transacción:</label>
-        <input type="number" id="transactionAmount" name="transactionAmount" value="300" required>
-
-        <input type="hidden" name="payment_method_id" value="visa">
-        <input type="hidden" name="description" value="Compra en QuetzalArte">
-        <input type="hidden" name="payer.email" value="test_user@testuser.com">
-
-        <button type="submit">Pagar</button>
-    </form>
+    <h1>Comprar Producto</h1>
+    <button id="checkout-button">Pagar con Mercado Pago</button>
 
     <script>
-        const mp = new MercadoPago('APP_USR-5caafcd5-a407-4cfb-9626-fb7825d863f9', {
-            locale: 'es-MX'
-        });
+        const mp = new MercadoPago("TU_PUBLIC_KEY", { locale: "es-MX" });
 
-        const cardForm = mp.cardForm({
-            amount: document.getElementById('transactionAmount').value,
-            autoMount: true,
-            form: {
-                id: 'paymentForm',
-                cardNumber: {
-                    id: 'cardNumber',
-                    placeholder: 'Número de tarjeta'
+        document.getElementById("checkout-button").addEventListener("click", async () => {
+            const preference = {
+                items: [
+                    {
+                        title: "Producto de prueba",
+                        unit_price: 100,
+                        quantity: 1
+                    }
+                ],
+                back_urls: {
+                    success: "https://tusitio.com/success",
+                    failure: "https://tusitio.com/failure",
+                    pending: "https://tusitio.com/pending"
                 },
-                expirationDate: {
-                    id: 'cardExpirationMonth',
-                    placeholder: 'MM/YYYY'
-                },
-                securityCode: {
-                    id: 'securityCode',
-                    placeholder: 'Código de seguridad'
-                },
-                cardholderName: {
-                    id: 'cardholderName',
-                    placeholder: 'Nombre del titular'
+                auto_return: "approved"
+            };
+
+            try {
+                const response = await fetch("https://api.mercadopago.com/checkout/preferences", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "Authorization": "Bearer TU_ACCESS_TOKEN"
+                    },
+                    body: JSON.stringify(preference)
+                });
+
+                const data = await response.json();
+
+                if (data.id) {
+                    window.location.href = data.init_point;
+                } else {
+                    alert("Error al generar el pago.");
                 }
-            },
-            callbacks: {
-                onFormMounted: error => {
-                    if (error) return console.error('Error al montar el formulario: ', error);
-                    console.log('Formulario montado');
-                },
-                onSubmit: event => {
-                    event.preventDefault();
-
-                    const {
-                        paymentMethodId,
-                        issuerId,
-                        cardholderEmail,
-                        amount,
-                        token
-                    } = cardForm.getCardFormData();
-
-                    fetch('https://api.mercadopago.com/v1/payments', {
-                        method: 'POST',
-                        headers: {
-                            'Authorization': 'Bearer APP_USR-6378641395478188-022700-b612599b847d64f48cce348679d2712b-74762859',
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                            token,
-                            issuer_id: issuerId,
-                            payment_method_id: paymentMethodId,
-                            transaction_amount: Number(amount),
-                            installments: Number(document.getElementById('installments').value),
-                            description: document.querySelector('input[name="description"]').value,
-                            payer: {
-                                email: cardholderEmail,
-                                identification: {
-                                    type: 'DNI',
-                                    number: '12345678'
-                                }
-                            }
-                        })
-                    })
-                    .then(response => {
-                        console.log('Respuesta recibida:', response);
-                        if (!response.ok) {
-                            throw new Error('Error en la respuesta de la API');
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        console.log('Datos recibidos:', data);
-                        if (data.status === 'approved') {
-                            alert('Pago aprobado');
-                        } else {
-                            alert('Pago rechazado: ' + data.status_detail);
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                        alert('Ocurrió un error al procesar el pago.');
-                    });
-                },
-                onFetching: (resource) => {
-                    console.log('Recuperando recurso: ', resource);
-                },
-                onError: (error) => {
-                    console.error('Error: ', error);
-                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Hubo un problema con el pago.");
             }
         });
     </script>
