--- a/mpagos.html
+++ b/mpagos.html
@@ -11,7 +11,7 @@
     <button id="checkout-button">Pagar con Mercado Pago</button>
 
     <script>
-        const mp = new MercadoPago("TU_PUBLIC_KEY", { locale: "es-MX" });
+        const mp = new MercadoPago("APP_USR-5caafcd5-a407-4cfb-9626-fb7825d863f9", { locale: "es-MX" });
 
         document.getElementById("checkout-button").addEventListener("click", async () => {
             const preference = {
@@ -35,7 +35,7 @@
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
-                        "Authorization": "Bearer TU_ACCESS_TOKEN"
+                        "Authorization": "APP_USR-6378641395478188-022700-b612599b847d64f48cce348679d2712b-74762859"
                     },
                     body: JSON.stringify(preference)
                 });
