--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body>
-    <h1>Pago con Mercado Pago</h1>
+    <h1>Pago con Mercado Pago1</h1>
     <div id="wallet_container"></div>
 
     <script>
@@ -17,7 +17,7 @@
         // Renderizar botón de pago
         mp.bricks().create("wallet", "wallet_container", {
             initialization: {
-                preferenceId: "<PREFERENCE_ID>" // Reemplaza con tu ID de preferencia
+                preferenceId: "<1>" // Reemplaza con tu ID de preferencia
             },
             customization: {
                 texts: {
