Update carrito_compras - v1.html

--- a/carrito_compras - v1.html
+++ b/carrito_compras - v1.html
@@ -153,11 +153,21 @@
             <input type="text" id="reference" name="reference" required><br>
             <label for="e-mail">E-mail:</label>
             <input type="text" id="email" name="email"><br><br/>
-            <button type="button" onclick="comprar()">Comprar</button> / <button type="button" onclick="comprar()">Registrarse y Comprar</button>
+            <button type="button" onclick="comprar()">Comprar</button>
+             / <button type="button" onclick="comprar()">Registrarse y Comprar</button>
+             / <button type="button" onclick="comprar()">Solicitar Pedido</button>
         </form>
     </div>
 
 </div></div>
+
+
+<div>
+
+    "¡Hola! Te invitamos a explorar nuestra tienda en línea para comprar, cotizar o realizar un pedido de manera fácil y conveniente. 
+
+</div>
+
 
     <h2>Productos <div class="search-bar">
         🔎 <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
