--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -67,6 +67,12 @@
                        
             </div>
 
+            <div>
+
+                ¡Hola! Te invitamos a comprar, cotizar o realizar un pedido fácilmente a través de nuestra tienda en línea
+                
+            </div>
+
     <span>
          <span class="cart-icon" onclick="toggleCart()">🛒<span id="cartCount">0</span></span>
     </span>
@@ -162,11 +168,7 @@
 </div></div>
 
 
-<div>
 
-    "¡Hola! Te invitamos a explorar nuestra tienda en línea para comprar, cotizar o realizar un pedido de manera fácil y conveniente. 
-
-</div>
 
 
     <h2>Productos <div class="search-bar">
