--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -158,10 +158,10 @@
             <label for="reference">Referencia:</label>
             <input type="text" id="reference" name="reference" required><br>
             <label for="e-mail">E-mail:</label>
-            <input type="text" id="email" name="email"><br><br/>
+            <input type="text" id="email" name="email" required><br><br/>
             <button type="button" onclick="comprar()">Comprar</button>
              / <button type="button" onclick="comprar()">Registrarse y Comprar</button>
-             / <button type="button" onclick="comprar()">Solicitar Pedido</button>
+             / <button type="button" onclick="solicitar()">Solicitar Pedido y Notificar Compra Whats App</button>
         </form>
     </div>
 
@@ -413,5 +413,39 @@
             });
         }
     </script>
+
+<script>
+    function solicitarPedido() {
+        const form = document.getElementById('shippingForm');
+        const inputs = form.querySelectorAll('input[required]');
+        let valid = true;
+
+        inputs.forEach(input => {
+            if (!input.value) {
+                input.classList.add('invalid');
+                valid = false;
+            } else {
+                input.classList.remove('invalid');
+            }
+        });
+
+        if (valid && shippingType !== 'default' && paymentType !== '💰 Selecciona la forma de pago.') {
+            let cartDetails = cart.map(item => `${item.name} - Cantidad: ${item.quantity}`).join('\n');
+            let totalDetails = `Total: $${total}\nPeso Total: ${totalWeight.toFixed(2)} kg\nEnvío: $${shippingCost}\nComisión: ${paymentCommission}%\nTotal a pagar: $${(total + shippingCost + (total * paymentCommission / 100)).toFixed(2)}`;
+            let shippingDetails = `Nombre: ${form.name.value}\nDirección: ${form.address.value}\nCiudad: ${form.city.value}\nEstado: ${form.state.value}\nCódigo Postal: ${form.zip.value}\nPaís: ${form.country.value}\nTeléfono: ${form.phone.value}\nReferencia: ${form.reference.value}\nE-mail: ${form.email.value}`;
+            let message = `Detalles del Pedido:\n${cartDetails}\n\n${totalDetails}\n\nDatos de Envío:\n${shippingDetails}`;
+
+            let whatsappUrl = `https://wa.me/2224606907?text=${encodeURIComponent(message)}`;
+            window.open(whatsappUrl, '_blank');
+        } else {
+            alert('Por favor, completa todos los campos y selecciona el tipo de envío y pago.');
+        }
+    }
+
+    document.querySelector('button[onclick="solicitar()"]').setAttribute('onclick', 'solicitarPedido()');
+</script></script>
+
+
+
 </body>
 </html>
