--- a/carrito_compras - v1.html
+++ b/carrito_compras - v1.html
@@ -199,12 +199,18 @@
             <label for="reference">Referencia:</label>
             <input type="text" id="reference" name="reference" required><br>
             <label for="e-mail">E-mail:</label>
-            <input type="text" id="email" name="email" required><br><br/>
-            <button type="button" onclick="comprar()">Comprar</button>
-             / <button type="button" onclick="comprar()">Registrarse y Comprar</button>
-             / <button type="button" onclick="solicitar()">Solicitar Pedido y Notificar Compra Whats App</button>
-        </form>
+            <input type="text" id="email" name="email" required>
+            
+            <br><br/>
+
+
+            <button type="button" onclick="comprar()">Comprar </button>
+            <button type="button" onclick="solicitarPedido()">Solicitar más información de este pedido por WhatsApp</button>
+            
+            </form>
     </div>
+
+    <div id="detallesCompra"></div>
 
 </div></div></div>
 
@@ -350,10 +356,30 @@
                     shippingIcon = "✈️";
                     shippingMessage = "ENVÍO PREMIUM.";
                     break;
-                case '15kg':
+                case '3kg':
+                    shippingIcon = "🚚";
+                    shippingMessage = "ENVÍO 3kg.";
+                    break;
+                    case '6kg':
+                    shippingIcon = "🚚";
+                    shippingMessage = "ENVÍO 6kg.";
+                    break;
+                    case '9kg':
+                    shippingIcon = "🚚";
+                    shippingMessage = "ENVÍO 9kg.";
+                    break;
+                    case '15kg':
                     shippingIcon = "🚚";
                     shippingMessage = "ENVÍO 15kg.";
                     break;
+                    case '30kg':
+                    shippingIcon = "🚚";
+                    shippingMessage = "ENVÍO 130kg.";
+                    break;
+                    case '50kg':
+                    shippingIcon = "🚚";
+                    shippingMessage = "ENVÍO 50kg.";
+                    break;    
             }
 
             document.getElementById("shippingInfo").innerHTML = `<span>${shippingIcon}</span> ${shippingMessage}`;
@@ -505,9 +531,27 @@
             if (valid && shippingType !== 'default' && paymentType !== '💰 Selecciona la forma de pago.') {
                 alert('Compra realizada con éxito');
                 // Aquí puedes agregar la lógica para procesar la compra
+                mostrarDetallesCompra();
             } else {
                 alert('Por favor, completa todos los campos y selecciona el tipo de envío y pago.');
             }
+        }
+
+        function mostrarDetallesCompra() {
+            const form = document.getElementById('shippingForm');
+            let cartDetails = cart.map(item => `${item.name} - Cantidad: ${item.quantity}`).join('\n');
+            let totalDetails = `Total: $${total}\nPeso Total: ${totalWeight.toFixed(2)} kg\nEnvío: $${shippingCost}\nComisión: ${paymentCommission}%\nTotal a pagar: $${(total + shippingCost + (total * paymentCommission / 100)).toFixed(2)}`;
+            let shippingDetails = `Nombre: ${form.name.value}\nDirección: ${form.address.value}\nCiudad: ${form.city.value}\nEstado: ${form.state.value}\nCódigo Postal: ${form.zip.value}\nPaís: ${form.country.value}\nTeléfono: ${form.phone.value}\nReferencia: ${form.reference.value}\nE-mail: ${form.email.value}`;
+            let message = `Detalles del Pedido:\n${cartDetails}\n\n${totalDetails}\n\nDatos de Envío:\n${shippingDetails}`;
+
+            let detallesDiv = document.createElement('div');
+            detallesDiv.innerHTML = `<h2>Detalles de la Compra</h2><pre>${message}</pre><button onclick="window.print()">Imprimir</button><button onclick="compartirRedes('${encodeURIComponent(message)}')">Compartir en Redes Sociales</button>`;
+            document.getElementById('detallesCompra').appendChild(detallesDiv);
+        }
+
+        function compartirRedes(message) {
+            let url = `https://www.facebook.com/sharer/sharer.php?u=${message}`;
+            window.open(url, '_blank');
         }
 
         function filterProducts() {
