--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-    <div><h2>🏪 QuetzalArte.com</h2> </div> 
+    <div><h2>🏪 QuetzalArte.com</h2>  </div> 
         <div>
             <span>👤 Ingresar</span> | 
 
@@ -218,9 +218,9 @@
 
 
 
-    <h2>Productos <div class="search-bar">
+    <h1>Tintas y Productos para las Artes Gráficas <div class="search-bar">
         🔎 <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
-    </div></h2>
+    </div></h1>
     <div class="products" id="productList">
         <div class="product">
             <img src="https://http2.mlstatic.com/D_Q_NP_2X_787338-MLU71273939627_082023-AC.webp" alt="Producto A">
